Fix reset Additionally, I fixed a small problem where the textarea didn't have a maximum width and could be adjusted to a size that was too large.

--- a/prod/style.css
+++ b/prod/style.css
@@ -26,6 +26,7 @@ header h1 {
 
 header textarea {
   width:100%;
+  max-width:100%;
   padding:5px;
   height:200px;
   line-height:125%;
